# node-java-bridge

./: .gitignore  .mocharc.json  .npmignore  .prettierignore  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  file.js  index.d.ts  index.js  mocha-reporter-config.json  package-lock.json  package.json  printJavaHome.js  test.d.ts  test.js  tsconfig.json  webpack.config.js  webpack.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  alpine-container.yml  asan.yml  check-style.yml  docker-publish.yml  node.js.yml  pages.yml  publish.yml  system_test.yml  test-container.yml  test.yml
crates/java-bridge/: Cargo.toml
crates/java-bridge/src/: lib.rs
crates/java-bridge/src/java/: class_constructor.rs  class_field.rs  class_method.rs
crates/java-bridge/src/logging/: appender.rs  dummies.rs  log.rs  macros.rs  mod.rs  writer.rs
crates/java-bridge/src/node/: class_cache.rs  config.rs  init.rs  java.rs  java_class_instance.rs  java_class_proxy.rs  java_config.rs  java_options.rs  mod.rs  stdout_redirect.rs
crates/java-bridge/src/node/extensions/: class_ext.rs  java_call_result_ext.rs  java_type_ext.rs
crates/java-bridge/src/node/helpers/: arg_convert.rs  js_to_java_object.rs  napi_error.rs  napi_ext.rs
crates/java-bridge/src/node/interface_proxy/: function_caller.rs  interface_call.rs  interface_proxy_options.rs  java_interface_proxy.rs  js_error.rs  proxies.rs
crates/java-bridge/src/node/util/: helpers.rs  mod.rs  traits.rs  util.rs
crates/java-bridge/src/tests/: common.rs  config_test.rs  mod.rs  util_tests.rs
crates/java-rs/: Cargo.toml  README.md  build.rs
crates/java-rs/src/: lib.rs  log.rs
crates/java-rs/src/java/: java_call_result.rs  java_env.rs  java_env_wrapper.rs  java_error.rs  java_field.rs  java_type.rs  java_vm.rs  jni_error.rs  mod.rs  signature.rs  traits.rs  vm_ptr.rs
crates/java-rs/src/java/objects/: args.rs  array.rs  class.rs  constructor.rs  java_object.rs  method.rs  mod.rs  object.rs  string.rs  value.rs
crates/java-rs/src/java/util/: conversion.rs  helpers.rs  macros.rs  mod.rs  util.rs
crates/java-rs/src/sys/: mod.rs
crates/java-rs/src/tests/: array_tests.rs  basic_tests.rs  common.rs  method_tests.rs  mod.rs  object_tests.rs  signature_tests.rs
docker/: Dockerfile-build-alpine.hbs  Dockerfile-test-template.hbs  Dockerfile.alpine  Dockerfile.arm  Dockerfile.asan
docs/: index.html  modules.html
docs/assets/: highlight.css  search.js
docs/classes/: JavaClassInstance.html  JavaClassProxy.html  JavaObject.html  internal.Java.html  internal.JavaInterfaceProxy.html  internal.StdoutRedirect.html
docs/enums/: JavaVersion.html
docs/functions/: appendClasspath.html  classpath.append.html  classpath.get.html  ensureJvm.html  getJavaInstance.html  importClass.html  importClassAsync.html  internal.getClassFields.html  internal.getField.html  internal.getJavaLibPath.html  internal.getStaticField.html  internal.setField.html  internal.setStaticField.html  newProxy.html  stdout.enableRedirect.html
docs/interfaces/: ImportedMembers.html  JVMOptions.html  JavaInterfaceProxy.html  StdoutRedirectGuard.html  internal.ClassFieldInfo.html  internal.JavaOptions.html
docs/modules/: classpath.html  default.html  internal.html  stdout.html
docs/types/: BasicOrJavaType.html  BasicType.html  Constructor.html  JavaClassType.html  JavaConstructor.html  JavaType.html  ProxyMethod.html  StdoutCallback.html
include/: definitions.hpp  shared_releaser.hpp  util.hpp
include/jvm_lib/: io_github_markusjx_bridge_JavaFunctionCaller.h  io_github_markusjx_bridge_StdoutRedirect_CallbackOutputStream.h  java_exception.hpp  java_type.hpp  jni_wrapper.hpp  jobject_wrapper.hpp  jvm_env.hpp  jvm_jvm.hpp  shared_library.hpp
include/node_classes/: conversion_helper.hpp  java.hpp  java_array.hpp  java_class_proxy.hpp  java_function_caller.hpp  java_instance_proxy.hpp  jvm_container.hpp  node_jobject_wrapper.hpp  stdout_redirect.hpp
include/util/: persistent_object.hpp  shared_releaser.hpp  util.hpp
java-src/: .gitignore  build.gradle  settings.gradle
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: findJavaLibrary.js  printJavaHome.js  setJavaDllPath.js
src/: jni_wrapper.cpp  jni_wrapper.hpp  lib.rs  module.cpp  shared_library.cpp  shared_library.hpp  util.cpp
src/java/: class_constructor.rs  mod.rs
src/jni/: class_constructor.rs  class_field.rs  class_method.rs  java_call_result.rs  java_env.rs  java_env_wrapper.rs  java_field.rs  java_type.rs  java_vm.rs  mod.rs  traits.rs  vm_ptr.rs
src/jvm_lib/: java_exception.cpp  java_type.cpp  jni_wrapper.cpp  jobject_wrapper.cpp  jvm_env.cpp  jvm_jvm.cpp  shared_library.cpp
src/logging/: dummies.rs  log.rs  writer.rs
src/node/: arg_convert.rs  class_cache.rs  class_ext.rs  config.rs  java.rs  java_call_result_ext.rs  java_class_field.rs  java_class_instance.rs  java_class_proxy.rs  java_config.rs  java_interface_proxy.rs  java_options.rs  java_type_ext.rs  js_to_java_object.rs  mod.rs  napi_error.rs  napi_util.rs  stdout_redirect.rs  util.rs
src/node_classes/: java.cpp  (+7 more)
test/: ArrayListTest.test.ts  ArrayListTest.ts  ClassTest.test.ts  ConfigTest.test.ts  DeleteTest.test.ts  Dockerfile-test-template.hbs  LoggingTest.test.ts  MemorySafe.test.ts  ObjectTest.test.ts  ProxyTest.test.ts  ProxyTest.ts  RedirectTest.test.ts  RedirectTest.ts  StringTest.js  StringTest.test.ts  StringTest.ts  TypescriptDefinitionGenerator.test.ts  classes.d.ts  generateTestTypes.ts  log.config.json  testUtil.ts  tsconfig.json  utilTest.test.ts
ts-src/: TypescriptBulkDefinitionGenerator.ts  TypescriptDefinitionGenerator.ts  definitions.ts  findJavaLibrary.ts  index.ts  java.ts  logging.ts  native.ts  nativeLib.ts  setJavaDllPath.ts  util.ts
types/: ArrayList.ts  Collection.d.ts  List.d.ts
(+64 files in other folders)
