[package]
edition = "2021"
name = "java"
version = "2.2.3"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = [
    "napi2",
    "napi3",
    "napi4",
    "napi5",
    "napi6",
    "tokio_rt"
] }
napi-derive = "2.12.2"
tokio = "1.26.0"
futures = "0.3.27"
java-locator = "0.1.3"
lazy_static = "1.4.0"
rand = "0.8.5"
glob = "0.3.1"
java-rs = { git = "https://github.com/MarkusJx/java-rs" }
# TODO: remove this once the next version of napi-sys is released
libloading = "0.7.4"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
