[package]
edition = "2021"
name = "java"
version = "2.4.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.13.2", default-features = false, features = [
    "napi2",
    "napi3",
    "napi4",
    "napi5",
    "napi6",
    "tokio_rt"
] }
napi-derive = "2.13.0"
tokio = "1.28.0"
futures = "0.3.28"
java-locator = "0.1.5"
lazy_static = "1.4.0"
rand = "0.8.5"
glob = "0.3.1"
java-rs = { path = "../java-rs" }
app-state = { git = "https://github.com/MarkusJx/app-state" }
# TODO: remove this once the next version of napi-sys is released
libloading = "0.8.0"
anyhow = { version = "1.0.71", optional = true }
log = { version = "0.4", optional = true }
log4rs = { version = "1.2", features = ["json_format"], optional = true }
serde = { version = "1.0", optional = true }

[build-dependencies]
napi-build = "2.0.1"

[features]
default = []
all = ["log", "type_check"]
type_check = ["java-rs/type_check"]
log = ["dep:log", "dep:log4rs", "dep:serde", "dep:anyhow", "java-rs/log"]
