[package]
edition = "2021"
name = "java"
version = "2.4.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.0", default-features = false, features = [
    "napi2",
    "napi3",
    "napi4",
    "napi5",
    "napi6",
    "tokio_rt",
    "deferred_trace"
] }
napi-derive = "2.16.13"
futures = "0.3.31"
java-locator = "0.1.8"
lazy_static = "1.5.0"
rand = "0.8.5"
glob = "0.3.1"
java-rs = { path = "../java-rs" }
app-state = { git = "https://github.com/MarkusJx/app-state" }
# TODO: remove this once the next version of napi-sys is released
libloading = "0.8.6"
anyhow = { version = "1.0.94", optional = true }
log = { version = "0.4.22", optional = true }
log4rs = { version = "1.3.0", features = ["json_format"], optional = true }
serde = { version = "1.0.216", optional = true }
smart-default = "0.7.1"
spin_sleep = "1.3.0"

[build-dependencies]
napi-build = "2.1.4"

[features]
default = []
all = ["log", "type_check"]
type_check = ["java-rs/type_check"]
log = ["dep:log", "dep:log4rs", "dep:serde", "dep:anyhow", "java-rs/log"]
