[package]
name = "java-rs"
version = "1.0.0"
edition = "2021"

[dependencies]
libloading = "0.9"
lazy_static = "1.4.0"
java-locator = "0.1.5"
regex = { version = "1.11.1", optional = true }
log = { version = "0.4.22", optional = true }

[build-dependencies]
bindgen = "0.72.1"
java-locator = "0.1.8"
build-target = "0.8.0"

[features]
type_check = ["dep:regex"]
log = ["dep:log", "type_check"]
